<resources>
    <string name="app_name">MarioStay</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="otp_info">An OTP will be sent to the mobile number</string>
    <string name="photo_content_description">Photo of location</string>


    <!-- EditText hints -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_name">Username</string>
    <string name="prompt_otp">OTP</string>
    <string name="prompt_property_name">Property Name</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_landmark">Landmark</string>
    <string name="prompt_floors">No. of Floors</string>
    <string name="prompt_stay_time">Minimum Stay Time(In Months)</string>
    <string name="prompt_timings">*Leave them empty if timing is flexible</string>
    <string name="prompt_in_time">Gate close time</string>
    <string name="prompt_out_time">Gate open time</string>
    <string name="prompt_security_deposit">Security advance (in months)</string>
    <string name="prompt_notice_period">Prior Notice Period(in Days)</string>
    <string name="prompt_next_button">Next</string>
    <string name="prompt_amenities">Select available amenities:</string>
    <string name="prompt_desc_property">Enter Short Description of Property</string>
    <string name="prompt_location">Tag your location on map:</string>

    <!-- Checkbox texts -->
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="radio_student">Student</string>
    <string name="radio_professional">Professional</string>

    <!-- Button texts -->
    <string name="button_login">Login</string>
    <string name="button_signup">Register</string>
    <string name="button_otp">Send OTP</string>
    <string name="button_add_photos">Add Photos</string>
    <string name="button_guest">Continue as guest</string>

    <!-- Drawer menu -->
    <string name="drawer_add_property">Add property</string>
    <string name="drawer_inbox">Inbox</string>
    <string name="drawer_dashboard">Dashboard</string>
    <string name="drawer_payments">All payments</string>
    <string name="drawer_members">Current members</string>
    <string name="drawer_bookings">Manage bookings</string>
    <string name="drawer_receipts">All receipts</string>
    <string name="drawer_refund">Refund</string>

    <!-- Property type spinner -->
    <string name="property_type">Property Type</string>
    <string-array name="property_types">
        <item>Apartment</item>
        <item>Complex</item>
        <item>Individual</item>
    </string-array>
    <string-array name="dummy_props">
        <item>Property 1</item>
        <item>Property 2</item>
        <item>Property 3</item>
    </string-array>

    <string name="property_name_select">Select Property Name</string>

    <string-array name="property_names">
        <item>Prop1</item>
        <item>Prop2</item>
        <item>Prop3</item>
        <item>Prop4</item>
        <item>Prop5</item>
    </string-array>

    <!-- Chips for common amenities -->
    <string name="chip_text_lift">Lift Service</string>
    <string name="chip_text_parking">Parking</string>
    <string name="chip_text_cctv">CCTV camera</string>
    <string name="chip_text_power">Power backup</string>
    <string name="chip_text_playground">Playground</string>
    <string name="chip_text_pool">Swimming pool</string>
    <string name="chip_text_garden">Garden</string>
    <string name="chip_text_gym">Gym</string>
    <string name="chip_text_tv">Television</string>
    <string name="chip_text_refridgerator">Refrigerator</string>
    <string name="chip_text_washing_machine">Washing machine</string>
    <string name="chip_text_water_purifier">Water purifier</string>
    <string name="chip_text_wifi">Wifi</string>
    <string name="chip_text_sofa">Sofa</string>
    <string name="chip_text_table">Table</string>

    <string name="prompt_message">Enter message</string>
    <string name="drawer_properties">Properties</string>
    <string name="property_empty_message">No property yet!</string>
    <string name="title_activity_add_property">AddPropertyActivity</string>
    <string name="action_settings">Settings</string>
    <string name="property_item_image_description">Property Image</string>
    <string name="menu_add_property_save_progress">Save progress</string>
    <string name="image_description_property">Property image</string>
    <string name="property_details_text_common_amenities">Common amenities :</string>
    <string name="in_time_flexible">In Time : %1$s</string>
    <string name="out_time_flexible">Out Time : %1$s</string>
    <string name="property_details_reviews">Reviews : %1$d</string>
    <string name="property_details_security_deposit">Security Deposit : %1$d Months</string>
    <string name="property_details_house_rules">House Rules : Read</string>
    <string name="property_details_contact_host">Contact Host : Chat</string>
    <string name="property_details_notice_period">Notice Period : %1$d</string>
    <string name="property_details_min_stay_time">Minimum stay time : %1$d</string>
    <string name="button_manage_rooms">Manage Rooms</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_full_name">Full Name</string>
    <string name="hello_user">Hello, User</string>
    <string name="your_registerd_email">Your Registerd Email</string>
    <string name="upload_property_button">Upload Property</string>
    <string name="chip_text_gyser">Gyser</string>
    <string name="chip_text_attached_washroom">Attached Washroom</string>
    <string name="chip_text_wardrobe">Wardrobe</string>
    <string name="chip_text_balcony">Balcony</string>
    <string name="chip_text_ac">AC</string>

</resources>
