<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/ui_elems_spacing">

        <!--
        _________________________________________________________________________

        ID naming scheme : @[+]id/<fragment>_<element>_<description>
        _____________________________________________________________________
        -->

        <EditText
            android:id="@+id/prop_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_property_name"
            android:inputType="text" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <Spinner
            android:id="@+id/prop_spinner_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/property_types"
            android:prompt="@string/property_type"
            android:spinnerMode="dialog" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <EditText
            android:id="@+id/prop_edit_address"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/prompt_address"
            android:inputType="textMultiLine" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <EditText
            android:id="@+id/prop_edit_landmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_landmark"
            android:inputType="text" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <EditText
            android:id="@+id/prop_edit_floors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_floors"
            android:inputType="number" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <EditText
            android:id="@+id/prop_edit_stay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_stay_time"
            android:inputType="number" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/prop_edit_intime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/prompt_in_time"
                android:inputType="time" />

            <EditText
                android:id="@+id/prop_edit_outtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/prompt_out_time"
                android:inputType="time" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <EditText
            android:id="@+id/prop_edit_securitydeposit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_security_deposit"
            android:inputType="numberDecimal" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <EditText
            android:id="@+id/prop_edit_noticeperiod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_notice_period"
            android:inputType="numberDecimal" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/prop_button_descPage"
            android:text="@string/prompt_next_button" />

    </LinearLayout>

</ScrollView>