<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/ui_elems_spacing">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/prop_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_property_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_type"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Space
                android:layout_width="@dimen/ui_elems_spacing"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/prop_spinner_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/property_types" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/prop_edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxEms="10"
                android:hint="@string/prompt_address"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/prop_edit_landmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_landmark"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/prop_edit_floors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_floors"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/prop_edit_stay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_stay_time"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/prop_edit_intime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_in_time"
                    android:inputType="time" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/prop_edit_outtime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_out_time"
                    android:inputType="time" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_timings"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/prop_edit_securitydeposit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_security_deposit"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/prop_edit_noticeperiod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_notice_period"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <Button
            android:id="@+id/prop_button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_next_button" />

    </LinearLayout>

</ScrollView>
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-<TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin" />->

    <Button
        android:id="@+id/add_prop_next_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Next" />

</RelativeLayout>-->