<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/room_edit_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Room No:"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Floor No: "
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Space
                android:layout_width="@dimen/ui_elems_spacing"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/room_spinner_floorNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/room_edit_beds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="No. of Beds"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/room_edit_rent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Monthly Rent: "
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_amenities" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <com.google.android.flexbox.FlexboxLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:flexWrap="wrap">

            <TextView
                android:id="@+id/chip_AC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/chip_margin"
                android:background="@drawable/chip_shape_deactivated"
                android:text="AC"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/chip_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/chip_margin"
                android:background="@drawable/chip_shape_deactivated"
                android:text="TV"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/chip_balcony"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/chip_margin"
                android:background="@drawable/chip_shape_deactivated"
                android:text="Balcony"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/chip_wardrobe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/chip_margin"
                android:background="@drawable/chip_shape_deactivated"
                android:text="Wardrobe"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/chip_washroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/chip_margin"
                android:background="@drawable/chip_shape_deactivated"
                android:text="Attached Washroom"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/chip_Gyser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/chip_margin"
                android:background="@drawable/chip_shape_deactivated"
                android:text="Gyser"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/chip_sofa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/chip_margin"
                android:background="@drawable/chip_shape_deactivated"
                android:text="@string/chip_text_sofa"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/chip_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/chip_margin"
                android:background="@drawable/chip_shape_deactivated"
                android:text="@string/chip_text_table"
                android:textColor="@color/white" />

        </com.google.android.flexbox.FlexboxLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ui_elems_spacing" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/room_photo_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/room_button_selectPhotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_photos" />
            
        <Button
            android:id="@+id/room_button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save Room Details" />

    </LinearLayout>

</ScrollView>
